...
        self.setupBindings()
        self.viewModel?.getLeadMedia()
    }
    
    func configureBookmark() {
        let name = self.viewModel.isBookmarked ? "bookmark.fill" : "bookmark"
        self.toggleBookmarkButton.accessibilityIdentifier = self.viewModel.isBookmarked ? "removeBookmarkButton" : "addBookmarkButton"
        self.toggleBookmarkButton.configuration?.image = UIImage(systemName: name)?.applyingSymbolConfiguration(.init(scale: .small))
    }
    
    func setupBindings() {
        guard let viewModel = viewModel else { return }
        
...
